tests/static_errors/unknown_function.ca.output
Error occurred:
[tests/static_errors/unknown_function.ca:2,0] unknown_function()
[$518] output_placeholder() | Unknown function: nonexistant_function

